src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-134.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inca\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units inca"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: inca
              option: FrontsightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
