src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-136.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inca=2\")"
---
items:
  - loc: "#units inca=2"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: 2
        loc: inca=2
        locs:
          correction: "2"
          option: inca
        option: FrontsightAzimuthCorrection
    type: UnitsDirective
