src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-139.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inca=-2.3\")"
---
items:
  - loc: "#units inca=-2.3"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: -2.3
        loc: inca=-2.3
        locs:
          correction: "-2.3"
          option: inca
        option: FrontsightAzimuthCorrection
    type: UnitsDirective
