src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-141.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=g inca=2\")"
---
items:
  - loc: "#units a=g inca=2"
    locs:
      directive: "#units"
    options:
      - loc: a=g
        locs:
          option: a
          unit: g
        option: FrontsightAzimuthUnit
        unit: Grads
      - correction:
          unit: Grads
          value: 2
        loc: inca=2
        locs:
          correction: "2"
          option: inca
        option: FrontsightAzimuthCorrection
    type: UnitsDirective
