src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-144.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inca=-2q-\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units inca=-2q-"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "-2q-"
              loc: inca=-2q
              locs:
                correction: "-2q"
                option: inca
              option: FrontsightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDANGLEUNIT
    loc: q
    message: Invalid angle unit
    severity: Error
  - code: EUNEXPECTED
    loc: "-"
    message: Unexpected text
    severity: Error
